# M1-Ilsen-Tech_test_25_26

./: .gitignore  README.md  debug_triangulate.py  generate_pointsets.py  makefile  pyproject.toml
.github/workflows/: OnPush.yml  doc.yml
TP/: PLAN.md  RETEX.md  point_set_manager.html  triangulator.html
tests/: datasets.py  tests_PSM.py  tests_api.py  tests_data_types.py  tests_performance.py  tests_pointset.py  tests_triangles.py  tests_triangulator.py
triangulator/: PSM.py  data_types.py  http_server.py  pointset.py  triangles.py  triangulator.py
