[project]
name = "triangulator"
version = "0.1.0"

dependencies = [
    "blinker==1.9.0",
    "click==8.3.0",
    "flask==3.1.2",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "markupsafe==3.0.3",
    "werkzeug==3.1.3"
]

[tool.setuptools]
packages = ["triangulator"]


[tool.pytest.ini_options]
minversion = "8.0"
testpaths = [
    "tests",
]
python_files = [
    "tests_*.py"
]


[tool.ruff.lint]
select = [
    "D",
    "E",
    "F",
    "UP",
    "B",
    "SIM",
    "I",
]
