[project]
name = "triangulator"
version = "0.1.0"

dependencies = [
    "blinker==1.9.0",
    "click==8.3.0",
    "flask==3.1.2",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "markupsafe==3.0.3",
    "werkzeug==3.1.3"
]

[project.optional-dependencies]
dev = [
    "coverage==7.11.0",
    "iniconfig==2.3.0",
    "mako==1.3.10",
    "markdown==3.9",
    "markupsafe==3.0.3",
    "packaging==25.0",
    "pdoc3==0.11.6",
    "pluggy==1.6.0",
    "pygments==2.19.2",
    "pytest==8.4.2",
    "ruff==0.14.3"
]



[tool.setuptools]
packages = ["triangulator"]


[tool.pytest.ini_options]
minversion = "8.0"
testpaths = [
    "tests",
]
python_files = [
    "tests_*.py"
]
markers = [
    "performance: mark a test as a performance test. enabled by default, can be disabled with -m \"not performance\"",
]



[tool.ruff.lint]
select = [
    "D",
    "E",
    "F",
    "UP",
    "B",
    "SIM",
    "I",
]

[tool.ruff]
exclude = [
    "venv",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "tests",
    "generate_pointsets.py",
]

line-length = 255

[tool.coverage.run]
source = ["triangulator"]